# bot_template

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  copier.yml  repos.json  repos.txt
.github/workflows/: rollout.yml
hooks/: post_create_hook.py  post_gen_project.py  pre_gen_project.py
template/: Containerfile  Containerfile.jinja  README.md  README.md.jinja  app.py  build_container.sh  openapi3_1.yml  openapi3_1.yml.jinja  pyproject.toml  {{_copier_conf.answers_file}}.jinja
template/.github/_workflows~/: build_and_merge.yml
template/.github/workflows/: build_and_merge.yml  release.yml
template/docker/: compose.e2e.yml  compose.e2e.yml.jinja  compose.yml.jinja
template/{{package_name}}/: config.py
{{cookiecutter.__dir_name}}/: Containerfile  README.md  app.py  build_container.sh  pyproject.toml
{{cookiecutter.__dir_name}}/.github/workflows/: build.yml  build_and_merge.yml
{{cookiecutter.__dir_name}}/docker/: compose.e2e.yml
{{cookiecutter.__dir_name}}/{{cookiecutter.__package_name}}/: __init__.py  __main__.py  config.py  decorators.py  log.py  predictor_factory.py  router.py  {{cookiecutter.__module_name}}.py
{{dir_name}}/: build_container.sh
{{dir_name}}/{{package_name}}/: config.py
{{project_name}}/.github/workflows/: smoke_test.yml
