[project]
name = "{{cookiecutter.project_name.replace(' ', '')}}"
description = "{{cookiecutter.description}}"
readme = "README.md"
license = {file = "LICENSE.md"}
maintainers = [{ name = "AIT", email = "{{cookiecutter.author_mail}}" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "taranis-base-bot",
    "transformers",
    "torch"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
"Source Code" = "{{cookiecutter.repo_url}}"

[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
tag_regex = "^refs/pull/(\\d+)/merge$"

[tool.setuptools]
packages = ["{{cookiecutter.__package_name}}"]

[tool.ruff]
line-length = 142
target-version = "py313"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
